--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES6",                    // Target ECMAScript version
-    "module": "ES6",                    // Specify module code generation
-    "outDir": "./dist",                 // Output directory for compiled files
-    "rootDir": "./src",                 // Root directory of input files
-    "strict": true,                     // Enable all strict type-checking options
-    "esModuleInterop": true,            // Enables interoperability between CommonJS and ES Modules
-    "skipLibCheck": true,               // Skip type checking of declaration files
-    "forceConsistentCasingInFileNames": true,  // Enforces consistent casing in file names
-    "declaration": true,                // Generates corresponding .d.ts files
-    "sourceMap": true                   // Generates source maps
+    "target": "ES6", // Target ECMAScript version
+    "module": "ES6", // Specify module code generation
+    "outDir": "./dist", // Output directory for compiled files
+    "rootDir": "./src", // Root directory of input files
+    "strict": true, // Enable all strict type-checking options
+    "skipLibCheck": true, // Skip type checking of declaration files
+    "forceConsistentCasingInFileNames": true, // Enforces consistent casing in file names
+    "declaration": true, // Generates corresponding .d.ts files
+    "sourceMap": true, // Generates source maps
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
   },
-  "include": ["src/**/*.ts"],           // Files to include in compilation
-  "exclude": ["node_modules"]           // Files to exclude from compilation
+  "include": ["src/**/*.ts"], // Files to include in compilation
+  "exclude": ["node_modules"], // Files to exclude from compilation
 }
